@@ -1,5 +1,7 @@
 ﻿============================== Next release ==============================
 
+  new data (thanks to Yago Arosa Lobato, Universidade de Santiago de Compostela, Spain!)
+    main/SiO2/Arosa.yml
   new data (thanks to Georgy Ermolaev, Moscow Institute of Physics and Technology, Russia, for submitting data in YAML format!)
     other/perovskite/CsPbBr3/Ermolaev-o.yml
     other/perovskite/CsPbBr3/Ermolaev-e.yml
